--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,10 @@
+couriersrs 0.1.2
+================
+
+No functional changes. Just including a patch from Hanno Böck
+<hanno@gentoo.org> in configure.ac.
+
+
 couriersrs 0.1.1
 ================
 
